# YOLO-Human-Detection-Project-Based-on-STM32H750

./: .gitignore  .mxproject  CHANGELOG_V5.md  CHANGELOG_V7_3.md  README.md  SECURITY.md  shiyan002.ioc
.ai/: network_nanov4_96_full_int8.tflite_c_info.json
Core/Inc/: i2c.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: dcmi.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_it.c  usart.c
H7_onboard/: .mxproject  hexapod.ioc
H7_onboard/MDK-ARM/: Hexapod.uvoptx  Hexapod.uvprojx  startup_stm32h750xx.s
MDK-ARM/: JLinkLog.txt  shiyan002.uvguix.62629  shiyan002.uvoptx  shiyan002.uvprojx  startup_stm32h750xx.lst
X-CUBE-AI/App/: app_x-cube-ai.c  app_x-cube-ai.h  network.c  network.h  network_config.h  network_data.c  network_data.h  network_data_params.c  network_data_params.h  network_generate_report.txt
communication/: README.md  README.txt
communication/前端/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
communication/固件/: bw21_l610_ecm.c
communication/固件/esp32s3_l610_ps2_v5/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  usb_rndis_4g_module.c
communication/服务器端/: README.md  api_handler.py  device_registry.py  esp_jpeg_udp.py  mjpeg_server.py  server.py  tcp_receiver.py  test_api_handler.py  test_device_registry.py  test_esp_jpeg_udp.py  test_mjpeg_server.py  test_telemetry_receiver.py  test_udp_receiver.py  test_ws_control.py  udp_receiver.py  ws_control.py  (+4 more)
models/: nanov4_96.onnx  nanov4_96_full_int8.tflite
tests/: test_ai_runtime_contract.py  test_nanov4_contract.py
tools/: check_regen_boundary.ps1
(+148 files in other folders)
